--- a/estilo.css
+++ b/estilo.css
@@ -6,7 +6,7 @@ h1 {
 }
 .caixa1 {
    position: absolute;
-   background: blue;
+   background: rgb(60, 255, 0);
    width: 200px;
    height: 200px;
    color: #FFFFFF;
@@ -36,19 +36,38 @@ nav ul {
   margin: 0;
   padding: 0;
   overflow: 0;
-
 }
 li {
- float: left;
+  float: left;
 }
 li a {
- display: block;
- color: white;
- padding: 14px 16px;
- text-align: center;
- text-decoration: none;
+  display: block;
+  color: rgb(255, 255, 255);
+  padding: 14px 16px;
+  text-align: center;
+  text-decoration: none;
 }
-li a:hover{
-  color:blue ;
-  background: yellow;
+li a:hover {
+  color: yellow;
+  background: violet;
 }
+#imagen {
+   width: 20%;
+}
+.boxgranada{
+  display: flex;
+  justify-content: center;
+  position: absolute;
+  width: 100%;
+  height: 50%;
+  background:  rgb rgb(255, 0, 0) ;
+  top:50px;
+  left:0;
+  margin: 20px;
+  border-color: green;
+  border-width: 20px;
+  border:style: solid;
+  padding:  20px;
+
+}
+ 
