--- a/estilo.css
+++ b/estilo.css
@@ -1,12 +1,13 @@
 body{
-  background: cyan
+  margin: 0;
+  padding: 0;
 }
 h1 {
   text-align: center;
 }
 .caixa1 {
    position: absolute;
-   background: rgb(60, 255, 0);
+   background: blue;
    width: 200px;
    height: 200px;
    color: #FFFFFF;
@@ -51,23 +52,49 @@ li a:hover {
   color: yellow;
   background: violet;
 }
-#imagen {
-   width: 20%;
+#image {
+   width: 30%;
 }
-.boxgranada{
+.boxImage {
+   display: flex;
+   justify-content: center;
+   position: absolute;
+   width: 100%;
+   height: 200px;
+   background: rgb(119, 156, 190);
+   top: 50px;
+   left: 0;
+   margin: 20px;
+   border-color: blue;
+   border-width: 20px;
+   border-style: solid;
+   padding: 20px;
+}
+.conteudo {
+  position: absolute;
+  top: 45px;
+  width: 100%;
+}
+#rodape {
+  position: relative;
+  width: 100%;
+  height: 35px;
   display: flex;
   justify-content: center;
-  position: absolute;
-  width: 100%;
-  height: 50%;
-  background:  rgb rgb(255, 0, 0) ;
-  top:50px;
-  left:0;
-  margin: 20px;
-  border-color: green;
-  border-width: 20px;
-  border:style: solid;
-  padding:  20px;
-
 }
- 
+#copy {
+  width: 90%;
+  background: black;
+  border-radius: 30px;
+  color: yellow;
+  display: flex;
+  justify-content: center;
+}
+.logoGastao{
+  position: absolute;
+  width: 120px;
+  height: 100px;
+  top: 0;
+  right: 0;
+  z-index: 999;
+}
